      zero for the program, since we do not actually want the kernel to write
      core files when we pipe the core dump to apport.
    - test-apport: Pass APPORT_REPORT_DIR to the manually called apport
      instance in the memory clipping test; otherwise it'll write into
      /var/crash/, which we do not consider in library mode.

 -- Martin Pitt <martin.pitt@ubuntu.com>  Tue, 24 Jul 2007 19:32:03 +0200

apport (0.91) gutsy; urgency=low

  * bin/apport: Remove code that supported the Edgy kernel way of core dump
    passing. Also factorize the CORE_REAL_RLIM evaluation, since it is likely
    to change in the near future.
  * apport/crashdb_impl/launchpad.py, close_duplicate(): Delete some
    attachments, as specified in apport-crash-duplicates spec, and make the
    bug public afterwards.
  * apport/crashdb_impl/launchpad.py, close_duplicate(): If the master bug is
    already duped to yet another bug, mark the bug to that one instead of the
    master.
  * apport/crashdb.py: Split out duplicate_db_last_consolidation() for getting
    the date (or seconds since) the last consolidation, so that we can use it
    externally.
  * apport/crashdb.py: Add duplicate_db_change_master_id() to change the
    master ID of a crash. Add test case to apport/crashdb_impl/memory.py.
  * Add bin/dupdb-admin: Initial version of duplicate db CLI app; can dump the
    db, display consolidation state, and change master bug IDs for now. Ship
    it in apport-retrace.
  * apport/crashdb.py, duplicate_db_last_consolidation(): Fix timedelta
    seconds calculation to actually take the days into account, too.
  * bin/crash-digger: Fix dumping of dup db after consolidation.
  * apport/ui.py:
    - test_run_report_bug_package(): Add test case for calling the UI in bug
      filing mode with an invalid package name.
    - run_report_bug(): Do not crash on invalid package name, generate an
      error message instead. (LP: #123644)